--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,235 @@
-body{
-    background-color: beige;
+:root{
+    --primary-bg-blue: radial-gradient(#36D1DC,30%, #5B86E5);
+    --primary-bg-gold: radial-gradient(#dbd032,30%, #e7a833);
+    --up-btn: rgba(71, 74, 255, 0.486);
+    --info-shadow: 0 0 50px 5px rgba(114, 81, 19, 0.678);
+    --info-box-bg: #fff;
+    --review-text: #4b4b4b;
+    --review-text-name: #3d3d3d;
+    --review-text-at: #979797;
+    --review-bg: white;
+    --chatbot-main: #305fc5;
+    --chatbot-bg: white;
+    --chatbot-text: #fff;
+}
+.dark-mode {
+    --primary-bg-blue: radial-gradient(#071b1d,30%, #0e1422);
+    --primary-bg-gold: radial-gradient(#272727,30%, #1a1a1a);
+    --up-btn: rgba(44, 46, 150, 0.486);
+    --info-shadow: 0 0 50px 5px rgba(17, 14, 9, 0.678);
+    --info-box-bg: rgb(197, 197, 197);
+    --review-text: rgb(255, 255, 255);
+    --review-text-name: #e2e2e2;
+    --review-text-at: #bbbbbb;
+    --review-bg: rgb(54, 54, 54);
+    --chatbot-main: #6c92e4;
+    --chatbot-bg: rgb(54, 54, 54);
+    --chatbot-text: rgb(24, 24, 24);
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Sora', sans-serif;
+}
+.main-width{
+    width: 1400px;
+    max-width: 95%;
+    margin: 0 auto;
+}
+.hero {
+    height: 100%;
+    width: 100%;
+    min-height: 100vh;
+    background: var(--primary-bg-blue);
+    position: relative;
+}
+.hero header .logo_tekst h1{
+    display: inline-block;
+}
+.hero header .logo_tekst h1 a{
+    font-size: 38px;
+    font-weight: 600;
+    text-decoration: none;
+    color: white;
+}
+.hero header .logo_tekst .logo{
+    float: left;
+    height: 45px;
+    margin-right: 3px;
+}
+.hero header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0 30px;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+}
+nav ul li a{
+    text-decoration: none;
+    color: white;
+    margin-left: 60px;
+    font-size: 20px;
+    font-weight: 600;
+}
+nav ul li a:hover{
+    color: #f8b943;
+    transition: .4s;
+}
+#myBtn {
+    display: none; 
+    position: fixed;
+    top: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: var(--up-btn);
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+    transition: .2s;
+  }
+  
+#myBtn:hover {
+    background-color: rgba(85, 85, 85, 0.842);
+    transition: .2s;
+}
+
+/*darkmode*/
+#darkmode {
+    display: flex;
+    position: relative;
+    background-color: rgba(77, 77, 77, 0.24);
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.664);
+    border: none;
+    outline: none;
+    padding: 7px;
+    border-radius: 50px;
+    font-size: 25px;
+    top: 0px;
+    right: auto;
+    z-index: 98;
+    transition: .2s;
+}
+#darkmode:hover{
+    background-color: rgba(77, 77, 77, 0.479);
+    color: rgba(255, 255, 255, 0.925);
+    transition: .2s;
+}
+#darkmode2{
+    display: none;
+    position: relative;
+    background-color: rgba(77, 77, 77, 0.24);
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.664);
+    border: none;
+    outline: none;
+    padding: 7px;
+    border-radius: 50px;
+    font-size: 25px;
+    top: 0px;
+    right: auto;
+    z-index: 98;
+    transition: .2s;    
+}
+#darmode2:hover{
+    display: flex;
+    position: relative;
+    background-color: rgba(77, 77, 77, 0.24);
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.664);
+    border: none;
+    outline: none;
+    padding: 7px;
+    border-radius: 50px;
+    font-size: 25px;
+    top: 0px;
+    right: auto;
+    z-index: 98;
+    transition: .2s;    
+}
+
+/*CONENT*/
+.content{
+    padding-top: 200px;
+}
+.content .main-text{
+    position: relative;
+    z-index: 2;
+}
+.content .main-text h1{
+    font-size: 60px;
+    line-height: 1;
+    color: white;
+    margin: 2px 0 50px;
+    font-weight: 900;
+}
+.content .main-text h2{
+    font-size: 16px;
+    color: white;
+}
+.content .main-text p{
+    max-width: 100%;
+    width: 540px;
+    color: white;
+    line-height: 1.8;
+    font-size: 15px;
+}
+.download-button{
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    background: white;
+    border: 1px solid white;
+    padding: 13px 20px;
+    margin-top: 20px;
+    border-radius: 30px;
+    font-size: 18px;
+    font-weight: 600;
+    transition: .6s;
+}
+.download-button i{
+    vertical-align: middle;
+}
+.download-button:hover{
+    transform: scale(1.05);
+    border: 2px solid white;
+    background: transparent;
+    color: white;
+    transition: .6s;
+}
+.info-button{
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    background: transparent;
+    border: 2px solid white;
+    padding: 13px 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    border-radius: 30px;
+    font-size: 18px;
+    font-weight: 600;
+    transition: .6s;
+}
+.info-button i{
+    vertical-align: middle;
+}
+.info-button:hover{
+    transform: scale(1.05);
+    border: 2px solid white;
+    background: white;
+    color: black;
+    transition: .6s;
+}
+.content .main-text a i{
+    font-size: 25px;
+    margin-right: 10px;
 }
