--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,13 +4,19 @@
     --up-btn: rgba(71, 74, 255, 0.486);
     --info-shadow: 0 0 50px 5px rgba(114, 81, 19, 0.678);
     --info-box-bg: #fff;
-    --review-text: #4b4b4b;
-    --review-text-name: #3d3d3d;
-    --review-text-at: #979797;
-    --review-bg: white;
-    --chatbot-main: #305fc5;
-    --chatbot-bg: white;
-    --chatbot-text: #fff;
+
+    /*Background Animated*/
+    --color-bg1: rgb(108, 0, 162);
+    --color-bg2: rgb(0, 17, 82);
+    --color1: 18, 113, 255;
+    --color2: 221, 74, 255;
+    --color3: 100, 220, 255;
+    --color4: 200, 50, 50;
+    --color5: 180, 180, 50;
+    --color-interactive: 140, 100, 255;
+    --circle-size: 80%;
+    --blending: hard-light;
+    --my-filter: url(#goo) blur(40px);
 }
 .dark-mode {
     --primary-bg-blue: radial-gradient(#071b1d,30%, #0e1422);
@@ -18,19 +24,33 @@
     --up-btn: rgba(44, 46, 150, 0.486);
     --info-shadow: 0 0 50px 5px rgba(17, 14, 9, 0.678);
     --info-box-bg: rgb(197, 197, 197);
-    --review-text: rgb(255, 255, 255);
-    --review-text-name: #e2e2e2;
-    --review-text-at: #bbbbbb;
-    --review-bg: rgb(54, 54, 54);
-    --chatbot-main: #6c92e4;
-    --chatbot-bg: rgb(54, 54, 54);
-    --chatbot-text: rgb(24, 24, 24);
 }
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Sora', sans-serif;
+    cursor: none;
+}
+/*Cursor*/
+.cursor-dot{
+    width: 5px;
+    height: 5px;
+    background-color: white;
+}
+.cursor-outline{
+    width: 30px;
+    height: 30px;
+    border: 2px solid hsla(0, 0%, 100%, 0.5);
+}
+.cursor-dot, .cursor-outline{
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    z-index: 1;
+    pointer-events: none;
 }
 .main-width{
     width: 1400px;
@@ -108,7 +128,7 @@ nav ul li a:hover{
     z-index: 1000;
     top: 0;
     left: 0;
-    background-color: #ffffff;
+    background-color: #a5a5a5;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -277,4 +297,130 @@ nav ul li a:hover{
 .content .main-text a i{
     font-size: 25px;
     margin-right: 10px;
+}
+/*Background Animated*/
+@keyframes moveInCircle {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes moveVertical {
+    0% {
+        transform: translateY(-50%);
+    }
+    50% {
+        transform: translateY(50%);
+    }
+    100% {
+        transform: translateY(-50%);
+    }
+}
+@keyframes moveHorizontal {
+    0% {
+        transform: translateX(-50%) translateY(-10%);
+    }
+    50% {
+        transform: translateX(50%) translateY(10%);
+    }
+    100% {
+        transform: translateX(-50%) translateY(-10%);
+    }
+}
+.gradient-bg{
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+    background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
+    top: 0;
+    left: 0;
+}
+svg{
+    display: none;
+}
+.gradients-container{
+    filter: var(--my-filter);
+    width: 100%;
+    height: 100%;
+}
+.g1{
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2);
+    left: calc(50% - var(--circle-size) / 2);
+    opacity: 1;
+
+    transform-origin: center center;
+    animation: moveVertical 30s ease infinite;
+}
+.g2{
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2);
+    left: calc(50% - var(--circle-size) / 2);
+    opacity: 1;
+
+    transform-origin: calc(50% - 400px);
+    animation: moveInCircle 20s reverse infinite;
+}
+.g3{
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2 + 200px);
+    left: calc(50% - var(--circle-size) / 2 - 500px);
+    opacity: 1;
+
+    transform-origin: calc(50% + 400px);
+    animation: moveInCircle 40s linear infinite;
+}
+.g4{
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: var(--circle-size);
+    height: var(--circle-size);
+    top: calc(50% - var(--circle-size) / 2);
+    left: calc(50% - var(--circle-size) / 2);
+    opacity: 0.7;
+
+    transform-origin: calc(50% - 200px);
+    animation: moveHorizontal 40s ease infinite;
+}
+.g2{
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: calc(var(--circle-size) * 2);
+    height: calc(var(--circle-size) * 2);
+    top: calc(50% - var(--circle-size));
+    left: calc(50% - var(--circle-size));
+    opacity: 1;
+
+    transform-origin: calc(50% - 800px) calc(50% + 200px);
+    animation: moveInCircle 20s ease infinite;
+}
+.interactive{
+    position: absolute;
+    background: radial-gradient(circle at center, rgba(var(--color-interactive), 0.8) 0, rgba(var(--color-interactive), 0) 50%) no-repeat;
+    mix-blend-mode: var(--blending);
+    width: 100%;
+    height: 100%;
+    top: -50%;
+    left: -50%;
+    opacity: 0.7;
 }
