--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -125,6 +125,18 @@ nav ul li a:hover{
     transition: .2s;
 }
 /*loader*/
+.loader-text{
+    font-size: 20px;
+    position: fixed;
+    top: 55%;
+    color: aliceblue;
+}
+.work-in-prgogress{
+    font-size: 10px;
+    position: fixed;
+    top: 58%;
+    color: aliceblue;
+}
 .loader-wrapper{
     width: 100%;
     height: 100%;
@@ -132,44 +144,36 @@ nav ul li a:hover{
     z-index: 1000;
     top: 0;
     left: 0;
-    background-color: #a5a5a5;
+    background-color: #1a1a1a;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .loader {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 84px;
+    height: 84px;
     position: relative;
-    border: 4px solid #Fff;
-    animation: loader 2s infinite ease;
   }
-  
-  .loader-inner {
-    vertical-align: top;
-    display: inline-block;
-    width: 100%;
-    background-color: #fff;
-    animation: loader-inner 2s infinite ease-in;
+  .loader:before , .loader:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    width:64px;
+    height: 64px;
+    border-radius: 50%;
+    background:aliceblue;
+    transform: translate(-50% , -100%)  scale(0);
+    animation: push 2s infinite linear;
   }
-  
-  @keyframes loader {
-    0% {transform: rotate(0deg);}
-    25% {transform: rotate(180deg);}
-    50% {transform: rotate(180deg);}
-    75% {transform: rotate(360deg);}
-    100% {transform: rotate(360deg);}
-}
-
-@keyframes loader-inner {
-    0% {height: 0%;}
-    25% {height: 0%;}
-    50% {height: 100%;}
-    75% {height: 100%;}
-    100% {height: 0%;}
+  .loader:after {
+    animation-delay: 1s;
   }
-
+  @keyframes push {
+      0% , 50%{ transform: translate(-50% , 0%)  scale(1) }
+    100% { transform: translate(-50%, -100%) scale(0) }
+  }
+ 
 /*darkmode*/
 #darkmode {
     display: flex;
