--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,7 +47,7 @@
     left: 0;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    z-index: 1;
+    z-index: 200;
     pointer-events: none;
 }
 /*Home side*/
@@ -63,16 +63,7 @@
     align-items: center;
 
 }
-.hero header .logo_tekst h1{
-    display: inline-block;
-}
-.hero header .logo_tekst h1 a{
-    font-size: 38px;
-    font-weight: 600;
-    text-decoration: none;
-    color: white;
-}
-.hero header .logo_tekst .logo{
+.hero header .logo{
     float: left;
     height: 45px;
     margin-right: 3px;
@@ -87,21 +78,6 @@
     width: 1400px;
     max-width: 95%;
     margin: 0 auto;
-}
-nav ul li{
-    list-style: none;
-    display: inline-block;
-}
-nav ul li a{
-    text-decoration: none;
-    color: white;
-    margin-left: 60px;
-    font-size: 20px;
-    font-weight: 600;
-}
-nav ul li a:hover{
-    color: #f8b943;
-    transition: .4s;
 }
 #myBtn {
     display: none; 
@@ -123,6 +99,65 @@ nav ul li a:hover{
 #myBtn:hover {
     background-color: rgba(85, 85, 85, 0.842);
     transition: .2s;
+}
+.menu-functions{
+    
+}
+/*Hamburger menu*/
+.bx-menu{
+    z-index: 101;
+    display: flex;
+    position: relative;
+    border: none;
+    outline: none;
+    padding: 7px;
+    border-radius: 50px;
+    top: 0px;
+    float: right;
+    font-size: 35px;
+    color: #ffffff;
+}
+#close{
+    z-index: 101;
+    margin: 20px;
+    float: right;
+    color: #ffffff;
+    font-size: 25px;
+}
+#menu{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    list-style: none;
+    text-align: center;
+    opacity: 0;
+    transition: all 1s ease;
+}
+#container-hamburger{
+    z-index: 101;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    background: #1f1f1f;
+    text-align: center;
+    transition: all 0.6s ease;
+}
+#menu li a{
+    display: inline-block;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 5px 0px;
+    transition: all 0.3s ease;
+}
+#menu li a:hover{
+    color: #f8b943;
+    transition: .4s;
 }
 /*loader*/
 .loader-text{
