--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -100,8 +100,10 @@
     background-color: rgba(85, 85, 85, 0.842);
     transition: .2s;
 }
-.menu-functions{
-    
+.menu-functions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 /*Hamburger menu*/
 .bx-menu{
@@ -134,17 +136,8 @@
     opacity: 0;
     transition: all 1s ease;
 }
-#container-hamburger{
-    z-index: 101;
-    position: fixed;
-    top: 0;
-    right: -100%;
-    width: 100%;
-    height: 100%;
-    background: #1f1f1f;
-    text-align: center;
-    transition: all 0.6s ease;
-}
+
+
 #menu li a{
     display: inline-block;
     padding: 10px;
@@ -159,6 +152,26 @@
     color: #f8b943;
     transition: .4s;
 }
+/*Hamburger menu GLASS*/
+#container-hamburger{
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+
+    z-index: 101;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: all 0.6s ease;
+}
+
+
 /*loader*/
 .loader-text{
     font-size: 20px;
