--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,7 @@
 :root{
-    --primary-bg-blue: radial-gradient(#36D1DC,30%, #5B86E5);
     --up-btn: rgba(71, 74, 255, 0.486);
-    --info-shadow: 0 0 50px 5px rgba(114, 81, 19, 0.678);
-    --info-box-bg: #fff;
+    --basic-btn: rgb(255, 255, 255);
+    --front-text: rgb(255, 255, 255);
 
     /*Background Animated*/
     --color-bg1: rgb(108, 0, 162);
@@ -18,10 +17,19 @@
     --my-filter: url(#goo) blur(40px);
 }
 .dark-mode {
-    --primary-bg-blue: radial-gradient(#071b1d,30%, #0e1422);
     --up-btn: rgba(44, 46, 150, 0.486);
-    --info-shadow: 0 0 50px 5px rgba(17, 14, 9, 0.678);
-    --info-box-bg: rgb(197, 197, 197);
+    --basic-btn: rgb(199, 199, 199);
+    --front-text: rgb(199, 199, 199);
+
+    /*Background Animated*/
+    --color-bg1: rgb(72, 0, 107);
+    --color-bg2: rgb(0, 10, 51);
+    --color1: 92, 16, 16;
+    --color2: 16, 49, 112;
+    --color3: 71, 16, 110;
+    --color4: 125, 11, 62;
+    --color5: 138, 131, 6;
+    --color-interactive: 16, 135, 133;
 }
 * {
     padding: 0;
@@ -79,27 +87,6 @@
     max-width: 95%;
     margin: 0 auto;
 }
-#myBtn {
-    display: none; 
-    position: fixed;
-    top: 20px;
-    right: 30px;
-    z-index: 99;
-    border: none;
-    outline: none;
-    background-color: var(--up-btn);
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 10px;
-    font-size: 18px;
-    transition: .2s;
-  }
-  
-#myBtn:hover {
-    background-color: rgba(85, 85, 85, 0.842);
-    transition: .2s;
-}
 .menu-functions {
     display: flex;
     align-items: center;
@@ -150,7 +137,7 @@
     display: inline-block;
     padding: 10px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 50px;
     font-weight: bold;
     color: #ffffff;
     margin: 5px 0px;
@@ -294,18 +281,18 @@
 .content .main-text h1{
     font-size: 60px;
     line-height: 1;
-    color: white;
+    color: var(--front-text);
     margin: 2px 0 50px;
     font-weight: 900;
 }
 .content .main-text h2{
     font-size: 16px;
-    color: white;
+    color: var(--front-text);
 }
 .content .main-text p{
     max-width: 100%;
     width: 540px;
-    color: white;
+    color: var(--front-text);
     line-height: 1.8;
     font-size: 15px;
 }
@@ -313,8 +300,8 @@
     display: inline-block;
     text-decoration: none;
     color: black;
-    background: white;
-    border: 1px solid white;
+    background: var(--basic-btn);
+    border: 1px solid var(--basic-btn);
     padding: 13px 20px;
     margin-top: 20px;
     border-radius: 30px;
@@ -327,17 +314,17 @@
 }
 .download-button:hover{
     transform: scale(1.05);
-    border: 2px solid white;
+    border: 2px solid var(--basic-btn);
     background: transparent;
-    color: white;
+    color: var(--basic-btn);
     transition: .6s;
 }
 .info-button{
     display: inline-block;
     text-decoration: none;
-    color: white;
+    color: var(--basic-btn);
     background: transparent;
-    border: 2px solid white;
+    border: 2px solid var(--basic-btn);
     padding: 13px 20px;
     margin-top: 20px;
     margin-left: 20px;
@@ -351,8 +338,8 @@
 }
 .info-button:hover{
     transform: scale(1.05);
-    border: 2px solid white;
-    background: white;
+    border: 2px solid var(--basic-btn);
+    background: var(--basic-btn);
     color: black;
     transition: .6s;
 }
