--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,6 +2,8 @@
     --up-btn: rgba(71, 74, 255, 0.486);
     --basic-btn: rgb(255, 255, 255);
     --front-text: rgb(255, 255, 255);
+    --hamburger-text: rgb(255, 255, 255);
+    --hamburger-textHover: rgb(82, 82, 82);
 
     /*Background Animated*/
     --color-bg1: rgb(108, 0, 162);
@@ -116,7 +118,7 @@
     margin: 20px;
     float: right;
     color: #ffffff;
-    font-size: 25px;
+    font-size: 35px;
     transition: .2s;
 }
 #close:hover{
@@ -139,12 +141,12 @@
     text-decoration: none;
     font-size: 50px;
     font-weight: bold;
-    color: #ffffff;
+    color: var(--hamburger-text);
     margin: 5px 0px;
     transition: all 0.3s ease;
 }
 #menu li a:hover{
-    color: #222222;
+    color: var(--hamburger-textHover);
     transition: .4s;
 }
 /*Hamburger menu GLASS*/
@@ -159,7 +161,7 @@
     z-index: 101;
     position: fixed;
     top: 0;
-    right: -100%;
+    right: 200%;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -203,7 +205,7 @@
     width:64px;
     height: 64px;
     border-radius: 50%;
-    background:aliceblue;
+    background:rgb(212, 95, 105);
     transform: translate(-50% , -100%)  scale(0);
     animation: push 2s infinite linear;
   }
@@ -282,21 +284,22 @@
     font-size: 60px;
     line-height: 1;
     color: var(--front-text);
-    margin: 2px 0 50px;
+    margin: 2px 0 10px;
     font-weight: 900;
 }
 .content .main-text h2{
     font-size: 16px;
     color: var(--front-text);
+    margin: 0 0 0 10px;
 }
 .content .main-text p{
     max-width: 100%;
-    width: 540px;
+    width: 570px;
     color: var(--front-text);
-    line-height: 1.8;
-    font-size: 15px;
+    line-height: 1.5;
+    font-size: 20px;
 }
-.download-button{
+.work-button{
     display: inline-block;
     text-decoration: none;
     color: black;
@@ -307,41 +310,17 @@
     border-radius: 30px;
     font-size: 18px;
     font-weight: 600;
-    transition: .6s;
+    transition: .6s ease;
 }
-.download-button i{
+.work-button i{
     vertical-align: middle;
 }
-.download-button:hover{
+.work-button:hover{
     transform: scale(1.05);
     border: 2px solid var(--basic-btn);
     background: transparent;
     color: var(--basic-btn);
-    transition: .6s;
-}
-.info-button{
-    display: inline-block;
-    text-decoration: none;
-    color: var(--basic-btn);
-    background: transparent;
-    border: 2px solid var(--basic-btn);
-    padding: 13px 20px;
-    margin-top: 20px;
-    margin-left: 20px;
-    border-radius: 30px;
-    font-size: 18px;
-    font-weight: 600;
-    transition: .6s;
-}
-.info-button i{
-    vertical-align: middle;
-}
-.info-button:hover{
-    transform: scale(1.05);
-    border: 2px solid var(--basic-btn);
-    background: var(--basic-btn);
-    color: black;
-    transition: .6s;
+    transition: .6s ease;
 }
 .content .main-text a i{
     font-size: 25px;
