--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -168,6 +168,64 @@
     text-align: center;
     transition: all 0.6s ease;
 }
+/*Settings menu*/
+#settings-close{
+    z-index: 101;
+    margin: 20px;
+    float: right;
+    color: #ffffff;
+    font-size: 35px;
+    transition: .2s;
+}
+#settings-close:hover{
+    color: #222222;
+    transition: .2s;
+}
+#settings-menu{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    list-style: none;
+    text-align: center;
+    opacity: 0;
+    transition: all 1s ease;
+}
+#settings-menu li a{
+    display: inline-block;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 50px;
+    font-weight: bold;
+    color: var(--hamburger-text);
+    margin: 5px 0px;
+    transition: all 0.3s ease;
+}
+#settings-menu li a:hover{
+    color: var(--hamburger-textHover);
+    transform: translate(-2%,-2%);
+    transition: .4s;
+}
+/*Settings menu GLASS*/
+#container-settings{
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+
+    z-index: 101;
+    position: fixed;
+    top: 0;
+    right: 200%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: all 0.6s ease;
+}
+
+
 /*To top*/
 #myBtn {
     display: none; 
@@ -291,6 +349,29 @@
     right: auto;
     z-index: 98;
     transition: .2s;    
+}
+/*settings*/
+#settings {
+    display: flex;
+    position: relative;
+    background-color: rgba(77, 77, 77, 0.24);
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.664);
+    border: none;
+    outline: none;
+    padding: 7px;
+    border-radius: 50px;
+    margin-left: 8px;
+    font-size: 25px;
+    top: 0px;
+    right: auto;
+    z-index: 98;
+    transition: .2s;
+}
+#settings:hover{
+    background-color: rgba(77, 77, 77, 0.479);
+    color: rgba(255, 255, 255, 0.925);
+    transition: .2s;
 }
 
 /*CONENT*/
@@ -474,12 +555,6 @@ svg{
     left: -50%;
     opacity: 0.7;
 }
-
-
-
-
-
-
 
 
 
