--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -217,10 +217,14 @@
 
     z-index: 101;
     position: fixed;
-    top: 0;
     right: 200%;
-    width: 100%;
-    height: 100%;
+    /* Adjust these properties to center the menu */
+    top: 50%;
+    left: -50%;
+    transform: translate(-50%, -50%);
+    /* End of adjustment */
+    width: 50%;
+    height: 50%;
     text-align: center;
     transition: all 0.6s ease;
 }
