--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -484,6 +484,23 @@ svg{
     width: 100%;
     height: 100%;
 }
+@supports (-moz-appearance:none) {
+    .g1 {
+        --circle-size: 50%;
+    }
+    .g2 {
+        --circle-size: 50%;
+    }
+    .g3 {
+        --circle-size: 50%;
+    }
+    .g4 {
+        --circle-size: 50%;
+    }
+    .g5 {
+        --circle-size: 30%;
+    }
+}
 .g1{
     position: absolute;
     background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
@@ -614,9 +631,8 @@ svg{
     top: -50%;
     left: -50%;
     opacity: 0.7;
+    filter: url("#goo");
 }
-
-
 
 
 
