--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -40,6 +40,9 @@
     font-family: 'Sora', sans-serif;
     cursor: none;
 }
+.show-cursor * {
+    cursor: auto;
+}
 /*Cursor*/
 .cursor-dot{
     width: 5px;
@@ -623,7 +626,7 @@ svg{
     background-image: linear-gradient(#4ddc9e, #5b37eb, #f1307e);
     animation: rotate 10s cubic-bezier(0.8, 0.2, 0.2, 0.8) alternate infinite;
     border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
-
+    transition: transform 0.1s ease-out;
   }
   
   @keyframes rotate {
