--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -257,13 +257,13 @@
 }
 /*loader*/
 .loader-text{
-    font-size: 20px;
-    color: aliceblue;
-    margin: 20px 0;
+    font-size: 40px;
+    color: #1a1a1a;
+    margin: 5px 0;
 }
 .work-in-prgogress{
-    font-size: 10px;
-    color: aliceblue;
+    font-size: 15px;
+    color: #1a1a1a;
 }
 .loader-wrapper{
     width: 100%;
@@ -278,29 +278,20 @@
     align-items: center;
     flex-direction: column;
 }
-.loader {
-    width: 84px;
-    height: 84px;
-    position: relative;
-  }
-  .loader:before , .loader:after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    width:64px;
-    height: 64px;
-    border-radius: 50%;
-    background:rgb(212, 95, 105);
-    transform: translate(-50% , -100%)  scale(0);
-    animation: push 2s infinite linear; 
-  }
-  .loader:after {
-    animation-delay: 1s;
-  }
-  @keyframes push {
-      0% , 50%{ transform: translate(-50% , 0%)  scale(1) }
-    100% { transform: translate(-50%, -100%) scale(0) }
+.gradient-loader {
+    width: 1000px;
+    height: 1000px;
+    position: fixed;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    top: 30%;
+    left: 20%;
+    filter: blur(50px);
+    background-image: linear-gradient(#4ddc9e, #5b37eb, #f1307e);
+    animation: rotate 10s cubic-bezier(0.8, 0.2, 0.2, 0.8) alternate infinite;
+    border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+    transition: transform 0.1s ease-out;
   }
  
 /*darkmode*/
