--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,6 +17,12 @@
     --circle-size: 80%;
     --blending: hard-light;
     --my-filter: url(#goo) blur(40px);
+
+    /*Work tiles*/
+    --tile1: rgb(238, 78, 57);
+    --tile2: rgb(86, 3, 196);
+    --tile3: rgb(209, 123, 212);
+    --tile4: rgb(54, 151, 180);
 }
 .dark-mode {
     --up-btn: rgba(44, 46, 150, 0.486);
@@ -32,6 +38,12 @@
     --color4: 125, 11, 62;
     --color5: 138, 131, 6;
     --color-interactive: 16, 135, 133;
+
+    /*Work tiles*/
+    --tile1: rgb(238, 78, 57);
+    --tile2: rgb(86, 3, 196);
+    --tile3: rgb(209, 123, 212);
+    --tile4: rgb(54, 151, 180);
 }
 * {
     padding: 0;
@@ -709,6 +721,7 @@ svg{
     width: 100%; 
     max-width: 1200px; 
     box-sizing: border-box;
+    z-index: 25;
 }
 /*Work tiles*/
 .outer-container {
@@ -728,7 +741,7 @@ svg{
 
 .tile {
     background-color: #f0f0f0;
-    border: 2px solid #ccc;
+    border: none;
     border-radius: 15px;
     overflow: hidden;
     transition: transform 0.3s ease;
@@ -747,44 +760,51 @@ svg{
 
 /* Tile Sizes */
 .small-square {
-    grid-row: span 1;
-    grid-column: span 1;
-    height: 100px;
+    grid-row: span 2;
+    grid-column: span 2;
+    height: 200px;
 }
 
 .medium-rect {
-    grid-row: span 2;
-    grid-column: span 1;
+    grid-row: span 2,5;
+    grid-column: span 3;
     height: 200px;
 }
 
 .large-square {
-    grid-row: span 2;
-    grid-column: span 2;
-    height: 200px;
+    grid-row: span 3;
+    grid-column: span 3;
+    height: 350px;
+}
+.large-tall-rect{
+    grid-row: span 3;
+    grid-column: span 3;
+    height: 420px;
 }
 
 .wide-rect {
-    grid-row: span 1;
-    grid-column: span 2;
-    height: 100px;
+    grid-row: span 2;
+    grid-column: span 4;
+    height: 200px;
 }
 
 .tall-rect {
-    grid-row: span 2;
+    grid-row: span 1;
     grid-column: span 1;
     height: 200px;
 }
 
-#tile1 { background-color: #ffd700; }
-#tile2 { background-color: #ff4500; }
-#tile3 { background-color: #32cd32; }
-#tile4 { background-color: #1e90ff; }
-#tile5 { background-color: #ff69b4; }
-#tile6 { background-color: #ff6347; }
-#tile7 { background-color: #3cb371; }
-#tile8 { background-color: #4682b4; }
-#tile9 { background-color: #dda0dd; }
-#tile10 { background-color: #ffa07a; }
-#tile11 { background-color: #20b2aa; }
-#tile12 { background-color: #ba55d3; }
+#tile1 { background-color: var(--tile1); }
+#tile2 { background-color: var(--tile2); }
+#tile3 { background-color: var(--tile3); }
+#tile4 { background-color: var(--tile4); }
+#tile5 { background-color: var(--tile1); }
+#tile6 { background-color: var(--tile2); }
+#tile7 { background-color: var(--tile3); }
+#tile8 { background-color: var(--tile4); }
+#tile9 { background-color: var(--tile1); }
+#tile10 { background-color: var(--tile2); }
+#tile11 { background-color: var(--tile3); }
+#tile12 { background-color: var(--tile4); }
+#tile13 { background-color: var(--tile2); }
+#tile14 { background-color: var(--tile3); }
