fixed bg to be the same

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,20 +5,9 @@
     --hamburger-text: rgb(255, 255, 255);
     --hamburger-textHover: rgb(46, 51, 128);
 
-    /*Background Animated*/
+    /*Background*/
     --color-bg1: rgb(108, 0, 162);
     --color-bg2: rgb(0, 17, 82);
-    --color1: 18, 113, 255;
-    --color2: 221, 74, 255;
-    --color3: 100, 220, 255;
-    --color4: 200, 50, 50;
-    --color5: 180, 180, 50;
-    --color-interactive: 140, 100, 255;
-    --circle-size: 80%;
-    --blending: hard-light;
-    --my-filter: url(#goo) blur(40px);
-
-    /*Firefox Background*/
     --firefox-bg1: rgb(77, 220, 158);
     --firefox-bg2: rgb(91, 55, 235);
     --firefox-bg3: rgb(241, 48, 126);
@@ -34,26 +23,18 @@
     --basic-btn: rgb(199, 199, 199);
     --front-text: rgb(199, 199, 199);
 
-    /*Background Animated*/
+    /*Background*/
     --color-bg1: rgb(72, 0, 107);
     --color-bg2: rgb(0, 10, 51);
-    --color1: 92, 16, 16;
-    --color2: 16, 49, 112;
-    --color3: 71, 16, 110;
-    --color4: 125, 11, 62;
-    --color5: 138, 131, 6;
-    --color-interactive: 16, 135, 133;
+    --firefox-bg1: rgb(52, 145, 104);
+    --firefox-bg2: rgb(55, 34, 138);
+    --firefox-bg3: rgb(146, 31, 77);
 
     /*Work tiles*/
     --tile1: rgb(238, 78, 57);
     --tile2: rgb(86, 3, 196);
     --tile3: rgb(209, 123, 212);
     --tile4: rgb(54, 151, 180);
-
-    /*Firefox Background*/
-    --firefox-bg1: rgb(52, 145, 104);
-    --firefox-bg2: rgb(55, 34, 138);
-    --firefox-bg3: rgb(146, 31, 77);
 }
 * {
     padding: 0;
@@ -321,7 +302,6 @@
     display: flex;
     position: relative;
     background-color: rgba(77, 77, 77, 0.24);
-    cursor: pointer;
     color: rgba(255, 255, 255, 0.664);
     border: none;
     outline: none;
@@ -342,7 +322,6 @@
     display: none;
     position: relative;
     background-color: rgba(77, 77, 77, 0.24);
-    cursor: pointer;
     color: rgba(255, 255, 255, 0.664);
     border: none;
     outline: none;
@@ -358,7 +337,6 @@
     display: flex;
     position: relative;
     background-color: rgba(77, 77, 77, 0.24);
-    cursor: pointer;
     color: rgba(255, 255, 255, 0.664);
     border: none;
     outline: none;
@@ -375,7 +353,6 @@
     display: flex;
     position: relative;
     background-color: rgba(77, 77, 77, 0.24);
-    cursor: pointer;
     color: rgba(255, 255, 255, 0.664);
     border: none;
     outline: none;
@@ -449,157 +426,12 @@
     font-size: 25px;
     margin-right: 10px;
 }
-/*Background Animated*/
-@keyframes moveInCircle {
-    0% {
-        transform: rotate(0deg);
-    }
-    50% {
-        transform: rotate(180deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-@keyframes moveVertical {
-    0% {
-        transform: translateY(-50%);
-    }
-    50% {
-        transform: translateY(50%);
-    }
-    100% {
-        transform: translateY(-50%);
-    }
-}
-@keyframes moveHorizontal {
-    0% {
-        transform: translateX(-50%) translateY(-10%);
-    }
-    50% {
-        transform: translateX(50%) translateY(10%);
-    }
-    100% {
-        transform: translateX(-50%) translateY(-10%);
-    }
-}
-.gradient-bg{
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
-    background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
-    top: 0;
-    left: 0;
-}
-.firefox .gradient-bg{
-    display: none;
-}
-svg{
-    display: none;
-}
-.gradients-container{
-    filter: var(--my-filter);
-    width: 100%;
-    height: 100%;
-}
-@supports (-moz-appearance:none) {
-    .g1 {
-        --circle-size: 50%;
-    }
-    .g2 {
-        --circle-size: 50%;
-    }
-    .g3 {
-        --circle-size: 50%;
-    }
-    .g4 {
-        --circle-size: 50%;
-    }
-    .g5 {
-        --circle-size: 30%;
-    }
-}
-.g1{
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2);
-    left: calc(50% - var(--circle-size) / 2);
-    opacity: 1;
-
-    transform-origin: center center;
-    animation: moveVertical 30s ease infinite;
-}
-.g2{
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2);
-    left: calc(50% - var(--circle-size) / 2);
-    opacity: 1;
-
-    transform-origin: calc(50% - 400px);
-    animation: moveInCircle 20s reverse infinite;
-}
-.g3{
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2 + 200px);
-    left: calc(50% - var(--circle-size) / 2 - 500px);
-    opacity: 1;
-
-    transform-origin: calc(50% + 400px);
-    animation: moveInCircle 40s linear infinite;
-}
-.g4{
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-    width: var(--circle-size);
-    height: var(--circle-size);
-    top: calc(50% - var(--circle-size) / 2);
-    left: calc(50% - var(--circle-size) / 2);
-    opacity: 0.7;
-
-    transform-origin: calc(50% - 200px);
-    animation: moveHorizontal 40s ease infinite;
-}
-.g5{
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-    width: calc(var(--circle-size) * 2);
-    height: calc(var(--circle-size) * 2);
-    top: calc(50% - var(--circle-size));
-    left: calc(50% - var(--circle-size));
-    opacity: 1;
-
-    transform-origin: calc(50% - 800px) calc(50% + 200px);
-    animation: moveInCircle 20s ease infinite;
-}
-.interactive{
-    position: absolute;
-    background: radial-gradient(circle at center, rgba(var(--color-interactive), 0.8) 0, rgba(var(--color-interactive), 0) 50%) no-repeat;
-    mix-blend-mode: var(--blending);
-    width: 100%;
-    height: 100%;
-    top: -50%;
-    left: -50%;
-    opacity: 0.7;
-    filter: url("#goo");
-}
 
 
-/*Background Animated for firefox*/
-.firefox .backgroundFirefox{
+
+/* -------------------- */
+  /* BACKGROUND ANIMATION */
+.backgroundFirefox{
     position: fixed;
     top: 0;
     left: 0;
@@ -616,15 +448,9 @@ svg{
     height: 100%;
     z-index: -1;
     overflow: hidden;
-    display: none;
-  }
-.firefox .swiper {
     display: block;
-}
+  }
 
-  
-  /* -------------------- */
-  /* BACKGROUND ANIMATION */
   
   .gradient {
     width: 1000px;
