--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -543,10 +543,10 @@
   gap: 20px;
   padding: 20px;
   margin: 0 auto;
-  margin-bottom: 100px;
   width: 90%;
   max-width: 1200px; 
-  transition: right 0.5s ease-out, transform 0.5s ease-out; 
+  opacity: 0;
+  transition: opacity 2s; 
 }
 .grid-container {
   display: grid;
@@ -555,7 +555,7 @@
   padding: 20px;
 }
 .grid-item {
-  background-color: #fff;
+  background-color: #070c3b;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -568,7 +568,7 @@
   border-bottom: 1px solid #ddd;
 }
 .grid-item a {
-  color: #333;
+  color: #e9e9e9;
   font-size: 1.2em;
   font-weight: bold;
   text-decoration: none;
@@ -576,7 +576,7 @@
   margin: 10px 0;
 }
 .grid-item p {
-  color: #666;
+  color: #e0e0e0;
   font-size: 0.9em;
   margin: 10px 0;
   word-wrap: break-word;
