--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -502,6 +502,7 @@
     top: 0;
     padding-top: 470px;
     position: absolute;
+    display: none;
     right: 200%;
     transition: right 0.5s ease-out; 
 }
@@ -623,7 +624,6 @@ body {
     color: #333;
     text-decoration: none;
   }
-  
   /* Styles for tablet screens (max-width: 768px) */
   @media only screen and (max-width: 768px) {
     body {
